<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UserProfileActivity">

    <TextView
        android:id="@+id/start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_header_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/Text.Header" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:srcCompat="@tools:sample/avatars"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_05"
        app:layout_constraintBottom_toTopOf="@id/guideline_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fio" />

    <TextView
        android:id="@+id/fio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text.profile_fio"

        android:text="@string/tool_fio_text"
        app:layout_constraintTop_toBottomOf="@id/guideline_05"
        app:layout_constraintBottom_toTopOf="@id/guideline_20"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/close_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_05"
        app:layout_constraintStart_toEndOf="@id/guideline_v90"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/email"
        app:layout_constraintTop_toBottomOf="@id/guideline_20"
        app:layout_constraintBottom_toTopOf="@id/call_icon"
        app:layout_constraintStart_toEndOf="@id/guideline_v05"
        app:layout_constraintEnd_toStartOf="@id/guideline_v20" />

    <ImageView
        android:id="@+id/call_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/call"
        app:layout_constraintTop_toBottomOf="@id/email_icon"
        app:layout_constraintBottom_toTopOf="@id/coordinates_icon"
        app:layout_constraintStart_toEndOf="@id/guideline_v05"
        app:layout_constraintEnd_toStartOf="@id/guideline_v20" />

    <ImageView
        android:id="@+id/coordinates_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/coordinates"
        app:layout_constraintTop_toBottomOf="@id/call_icon"
        app:layout_constraintBottom_toTopOf="@id/guideline_40"
        app:layout_constraintStart_toEndOf="@id/guideline_v05"
        app:layout_constraintEnd_toStartOf="@id/guideline_v20" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Text.clickable"
        android:layout_marginHorizontal="20dp"
        android:text="@string/email_default_text"
        app:layout_constraintTop_toBottomOf="@id/guideline_20"
        app:layout_constraintBottom_toTopOf="@id/call_text"
        app:layout_constraintStart_toEndOf="@id/email_icon"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/call_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Text.clickable"
        android:layout_marginHorizontal="20dp"
        android:text="@string/phone_number_default_text"
        app:layout_constraintTop_toBottomOf="@id/email_text"
        app:layout_constraintBottom_toTopOf="@id/coordinates_text"
        app:layout_constraintStart_toEndOf="@id/call_icon"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/coordinates_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Text.clickable"
        android:layout_marginHorizontal="20dp"
        android:text="@string/coordinates_default_text"
        app:layout_constraintTop_toBottomOf="@id/call_text"
        app:layout_constraintBottom_toTopOf="@id/guideline_40"
        app:layout_constraintStart_toEndOf="@id/coordinates_icon"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="50dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/grey_100"
        app:layout_constraintTop_toBottomOf="@id/guideline_40"
        app:layout_constraintBottom_toTopOf="@id/guideline_98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:id="@+id/scroll_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/gender_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/gender_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:text="@string/name_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/name_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/name_title_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/name_first_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/name_first_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/name_last_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/name_last_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/location_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:text="@string/location_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/location_country_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/country_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/location_state_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/state_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/location_city_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/city_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/location_street_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/street_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/location_postcode_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/postcode_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/location_coordinates_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:text="@string/coordinates_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/location_coordinates_latitude_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/latitude_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/location_coordinates_longitude_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/longitude_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/timezone_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:text="@string/timezone_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/timezone_offset_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/offset_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/timezone_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/description_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/email_slider_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/email_slider_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/dob_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/date_of_birth_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/dob_age_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/age_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/registered_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:text="@string/regitstered_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/registered_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/register_date_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/registered_age_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/register_age_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/phone_text"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/cell_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text.Card"
                    android:textIsSelectable="true"
                    android:text="@string/cell_text"
                    android:gravity="start" />





            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

</androidx.constraintlayout.widget.ConstraintLayout>