<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="100dp"
    android:layout_margin="10dp"
    android:background="@color/grey_100">

    <LinearLayout
        android:background="@color/grey_100"
        android:id="@+id/linear_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            tools:srcCompat="@tools:sample/avatars"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:id="@+id/linear_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:gravity="center" >

            <TextView
                android:id="@+id/fio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textStyle="bold"
                style="@style/Text.Card"
                android:text="@string/tool_fio_text" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                style="@style/Text.Card"
                android:text="@string/tool_address_text" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                style="@style/Text.Card"
                android:text="@string/tool_phone_text" />

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>